--- a/configs/td_5_nn_learnable.toml
+++ b/configs/td_5_nn_learnable.toml
@@ -14,12 +14,17 @@ data_distribution_seed = 1
 [model]
 hopsize = 80
 winlen = 320
-method = "complex_filter"
+method = "time_domain_filtering"
 num_filter_frames = 1
 learnable_transforms = true
+algorithmic_delay_nn=40
+algorithmic_delay_filtering=40
+adaptive_phase_shift=false
+linphase_regressor_hidden_size=1
+
 
 [model.crn_config]
-num_channels_encoder = [2, 32, 48, 64, 80]
+num_channels_encoder = [2, 16, 32, 48, 64]
 kernel_sizes = [[5, 3], [1, 3], [1, 3], [1, 3], [1, 3], [1, 3], [1, 3], [1, 3]]
 fstride = 2
 n_gru_layers = 1
