--- a/configs/cm_asym_5_learnable_ds2.toml
+++ b/configs/cm_asym_5_learnable_ds2.toml
@@ -1,10 +1,11 @@
-resume = true
+resume = false
 
-batch_size=32
+batch_size=64
 fs = 16000
 train_seq_duration = 4.0
 lr_start = 0.0003
 lr_stop = 0.00001
+lr_update_interval = 1000
 validate_only = false
 val_interval = 20000
 max_steps = 500000
