--- a/configs/td_5_nn_learnable.toml
+++ b/configs/td_5_nn_learnable.toml
@@ -1,11 +1,13 @@
 resume = true
 
-batch_size=32
+batch_size=64
 fs = 16000
 train_seq_duration = 4.0
 lr_start = 0.0003
 lr_stop = 0.00001
+lr_update_interval = 1000
 validate_only = false
+test_only = false
 val_interval = 20000
 max_steps = 500000
 num_workers = 14
@@ -15,12 +17,11 @@ data_distribution_seed = 1
 hopsize = 80
 winlen = 320
 method = "time_domain_filtering"
+use_mlp = false
 num_filter_frames = 1
 learnable_transforms = true
 algorithmic_delay_nn=40
 algorithmic_delay_filtering=40
-adaptive_phase_shift=false
-linphase_regressor_hidden_size=1
 
 
 [model.crn_config]
