--- a/configs/cmask_10ms_mlp.toml
+++ b/configs/cmask_10ms_mlp.toml
@@ -1,13 +1,9 @@
-resume = true
-
 batch_size=64
 fs = 16000
 train_seq_duration = 4.0
 lr_start = 0.0003
 lr_stop = 0.00001
 lr_update_interval = 1000
-validate_only = false
-test_only = false
 val_interval = 20000
 max_steps = 500000
 num_workers = 14
@@ -15,17 +11,16 @@ data_distribution_seed = 1
 
 [model]
 hopsize = 80
+algorithmic_delay_nn=160
 winlen = 320
-method = "time_domain_filtering"
-use_mlp = false
+method = "complex_filter"
+use_mlp = true
 num_filter_frames = 1
 learnable_transforms = true
-algorithmic_delay_nn=40
-algorithmic_delay_filtering=40
-
+downsample_factor = 1
 
 [model.crn_config]
-num_channels_encoder = [2, 16, 32, 48, 64]
+num_channels_encoder = [2, 16, 30, 45, 60]
 kernel_sizes = [[5, 3], [1, 3], [1, 3], [1, 3], [1, 3], [1, 3], [1, 3], [1, 3]]
 fstride = 2
 n_gru_layers = 1
