--- a/configs/cmask_40ms_mlp_2_frames_lookahead7.toml
+++ b/configs/cmask_40ms_mlp_2_frames_lookahead7.toml
@@ -1,8 +1,8 @@
 batch_size=64
 fs = 16000
 train_seq_duration = 4.0
-lr_start = 0.0003
-lr_stop = 0.00001
+lr_start = 0.0002
+lr_stop = 0.00007
 lr_update_interval = 1000
 val_interval = 20000
 max_steps = 500000
@@ -31,20 +31,17 @@ batch_norm = false
 [loss]
 winlen = 320
 complex_weight = 0.3
-f_fade_out_complex_low = 3000
-f_fade_out_complex_high = 4500
-spec_factor = 1000
-loss_type='combined'
-mres_factor = 500
-mres_gamma = 0.3
-mres_fft_sizes = [256,512,1024]
-
+f_fade_out_complex_low = 8100
+f_fade_out_complex_high = 8200
+loss_type = 'ccmse'
 
 [data_distribution]
+derev_decay_t60=0.3
 snr_mu_and_sigma=[15, 10]
 speech_rms_mu_and_sigma=[-20, 7]
 apply_noise=true
 rir_percentage=0.75
+spectral_augment = true
 
 
 
